# api/api_server.gen.go
@@ -35,9 +35,6 @@ type ServerInterface interface {
 	// Performs DNS query
 	// (POST /query)
 	Query(w http.ResponseWriter, r *http.Request)
-	// DNS statistics
-	// (GET /stats)
-	GetStats(w http.ResponseWriter, r *http.Request)
 }
 
 // Unimplemented server implementation that returns http.StatusNotImplemented for each endpoint.
@@ -77,12 +74,6 @@ func (_ Unimplemented) ListRefresh(w http.ResponseWriter, r *http.Request) {
 // Performs DNS query
 // (POST /query)
 func (_ Unimplemented) Query(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// DNS statistics
-// (GET /stats)
-func (_ Unimplemented) GetStats(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
@@ -202,20 +193,6 @@ func (siw *ServerInterfaceWrapper) Query(w http.ResponseWriter, r *http.Request)
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.Query(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r)
-}
-
-// GetStats operation middleware
-func (siw *ServerInterfaceWrapper) GetStats(w http.ResponseWriter, r *http.Request) {
-
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.GetStats(w, r)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -355,9 +332,6 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 	})
 	r.Group(func(r chi.Router) {
 		r.Post(options.BaseURL+"/query", wrapper.Query)
-	})
-	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/stats", wrapper.GetStats)
 	})
 
 	return r
@@ -500,38 +474,6 @@ func (response Query400TextResponse) VisitQueryResponse(w http.ResponseWriter) e
 	return err
 }
 
-type GetStatsRequestObject struct {
-}
-
-type GetStatsResponseObject interface {
-	VisitGetStatsResponse(w http.ResponseWriter) error
-}
-
-type GetStats200JSONResponse ApiStats
-
-func (response GetStats200JSONResponse) VisitGetStatsResponse(w http.ResponseWriter) error {
-
-	var buf bytes.Buffer
-	if err := json.NewEncoder(&buf).Encode(response); err != nil {
-		return err
-	}
-	w.Header().Set("Content-Type", "application/json")
-	w.WriteHeader(200)
-	_, err := buf.WriteTo(w)
-	return err
-}
-
-type GetStats503TextResponse string
-
-func (response GetStats503TextResponse) VisitGetStatsResponse(w http.ResponseWriter) error {
-
-	w.Header().Set("Content-Type", "text/plain")
-	w.WriteHeader(503)
-
-	_, err := w.Write([]byte(response))
-	return err
-}
-
 // StrictServerInterface represents all server handlers.
 type StrictServerInterface interface {
 	// Disable blocking
@@ -552,9 +494,6 @@ type StrictServerInterface interface {
 	// Performs DNS query
 	// (POST /query)
 	Query(ctx context.Context, request QueryRequestObject) (QueryResponseObject, error)
-	// DNS statistics
-	// (GET /stats)
-	GetStats(ctx context.Context, request GetStatsRequestObject) (GetStatsResponseObject, error)
 }
 
 type StrictHandlerFunc func(ctx context.Context, w http.ResponseWriter, r *http.Request, request any) (any, error)
@@ -732,30 +671,6 @@ func (sh *strictHandler) Query(w http.ResponseWriter, r *http.Request) {
 		sh.options.ResponseErrorHandlerFunc(w, r, err)
 	} else if validResponse, ok := response.(QueryResponseObject); ok {
 		if err := validResponse.VisitQueryResponse(w); err != nil {
-			sh.options.ResponseErrorHandlerFunc(w, r, err)
-		}
-	} else if response != nil {
-		sh.options.ResponseErrorHandlerFunc(w, r, fmt.Errorf("unexpected response type: %T", response))
-	}
-}
-
-// GetStats operation middleware
-func (sh *strictHandler) GetStats(w http.ResponseWriter, r *http.Request) {
-	var request GetStatsRequestObject
-
-	handler := func(ctx context.Context, w http.ResponseWriter, r *http.Request, request interface{}) (interface{}, error) {
-		return sh.ssi.GetStats(ctx, request.(GetStatsRequestObject))
-	}
-	for _, middleware := range sh.middlewares {
-		handler = middleware(handler, "GetStats")
-	}
-
-	response, err := handler(r.Context(), w, r, request)
-
-	if err != nil {
-		sh.options.ResponseErrorHandlerFunc(w, r, err)
-	} else if validResponse, ok := response.(GetStatsResponseObject); ok {
-		if err := validResponse.VisitGetStatsResponse(w); err != nil {
 			sh.options.ResponseErrorHandlerFunc(w, r, err)
 		}
 	} else if response != nil {
